--- a/backend/iotproject/docker-compose.yaml
+++ b/backend/iotproject/docker-compose.yaml
@@ -7,11 +7,24 @@ services:
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: root123
-      MYSQL_DATABASE: dbkms
+      MYSQL_DATABASE: iotProject
     ports:
       - "3366:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+
+  app:
+    build: .
+    container_name: iot-app
+    depends_on:
+      - mysql
+    ports:
+      - "8085:8085"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/iotProject?createDatabaseIfNotExist=true
+      SPRING_DATASOURCE_USERNAME: root
+      SPRING_DATASOURCE_PASSWORD: root123
+      SERVER_PORT: 8085
 
 volumes:
   mysql_data:
