--- a/backend/iotproject/src/main/resources/application.yaml
+++ b/backend/iotproject/src/main/resources/application.yaml
@@ -3,12 +3,12 @@ spring:
     name: iotproject
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3366/iotProject?createDatabaseIfNotExist=true
-    username: root
-    password: root123
+    url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/iotProject?createDatabaseIfNotExist=true}
+    username: ${SPRING_DATASOURCE_USERNAME:root}
+    password: ${SPRING_DATASOURCE_PASSWORD:root123}
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
     database-platform: org.hibernate.dialect.MySQLDialect
     generate-ddl: true
     show-sql: true
@@ -17,7 +17,7 @@ spring:
         format_sql: true
 
 server:
-  port: 8085
+  port: ${SERVER_PORT:8085}
 
 jwt:
   secret-key: v045kt3sQq/5FHzJ4TWc4EykRC9RMfCHzvECRMhjzu4=
