--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -4,27 +4,11 @@ spring:
   cache:
     type: simple
     cache-names: otpCache
-#  mail:
-#    host: sandbox.smtp.mailtrap.io
-#    port: 2525
-#    username: 799d945c80548a
-#    password: 2c9206de5e33d2
-#    protocol: smtp
-#    properties:
-#      mail.smtp:
-#        auth: true
-#        starttls:
-#          enable: true
-#          required: true  # Critical addition
-#        ssl:
-#          trust: "sandbox.smtp.mailtrap.io"  # Whitelist Mailtrap
-#        connectiontimeout: 5000  # 5 seconds
-#        timeout: 5000
-#        writetimeout: 5000
+
   mail:
     host: smtp.gmail.com
     port: 587
-    username: ay012941@gmail.com  # Your Gmail address
+    username: ay012941@gmail.com
     password: mygenqylrhpmqopa
     protocol: smtp
     properties:
@@ -40,6 +24,7 @@ spring:
     url: ${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/iotProject?createDatabaseIfNotExist=true}
     username: ${SPRING_DATASOURCE_USERNAME:root}
     password: ${SPRING_DATASOURCE_PASSWORD:root123}
+
   jpa:
     hibernate:
       ddl-auto: update
@@ -51,7 +36,11 @@ spring:
         format_sql: true
 
 server:
-  port: ${SERVER_PORT:8085}
+  port: ${SERVER_PORT:8080}
+
+
+
+
 
 jwt:
   secret-key: v045kt3sQq/5FHzJ4TWc4EykRC9RMfCHzvECRMhjzu4=
