--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -29,7 +29,7 @@ services:
       SERVER_PORT: 8080
 
   frontendapp:
-    build: ./my-angylar-app
+    build: ./my-angular-app
     container_name: my-angular-app
     ports:
       - 4200:4200
