--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,12 @@ services:
       - "3366:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+      
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost", "-p=root123"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   app:
     build: ./backend
