--- a/my-angular-app/Dockerfile
+++ b/my-angular-app/Dockerfile
@@ -11,4 +11,6 @@ COPY . .
 
 EXPOSE 4200
 
-CMD ["npx", "ng", "serve", "--host", "0.0.0.0"]
+CMD ["npm", "run", "start"]
+
+# CMD ["npx", "ng", "serve", "--host", "0.0.0.0"]
