--- a/my-angular-app/package.json
+++ b/my-angular-app/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^17.1.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "bootstrap": "^5.3.5",
+    "chart.js": "^4.4.9",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
