--- a/K8s/backend-service.yaml
+++ b/K8s/backend-service.yaml
@@ -8,4 +8,6 @@ spec:
   ports:
     - port: 8081
       targetPort: 8080
-  type: ClusterIP
+      nodePort: 30081  # add this for NodePort (optional)
+  type: NodePort
+
