--- a/K8s/backend-configmap.yaml
+++ b/K8s/backend-configmap.yaml
@@ -7,3 +7,5 @@ data:
   SPRING_DATASOURCE_USERNAME: root
   SPRING_DATASOURCE_PASSWORD: root123
   SERVER_PORT: "8080"
+  SENSOR_API_BASE_URL: http://iot-backend:8080
+  SENSOR_SCHEDULER_CRON: "0 */1 * * * *"
